add notes patient basic controller
